--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             <div class="sticky">
                 <h3 class="nav-heading">Menu</h3>
                 <ul class="navigation">
-                    <li><a href="#page1">Page 1</a></li>
-                    <li><a href="#page2">Page 2</a></li>
-                    <li><a href="#page3">Page 3</a></li>
-                    <li><a href="#page4">Page 4</a></li>
-                    <li><a href="#page5">Page 5</a></li>
+                    <a href="#page1"><li>Page 1</li></a>
+                    <a href="#page2"><li>Page 2</li></a>
+                    <a href="#page3"><li>Page 3</li></a>
+                    <a href="#page4"><li>Page 4</li></a>
+                    <a href="#page5"><li>Page 5</li></a>
                 </ul>
             </div>
         </nav>
         <main>
-            <h1>THE PSYCHOPATHOLOGY<br>OF EVERYDAY<br>THINGS</h1>
-            <p id="page1">If I were placed in the cockpit of a modern jet airliner, my inability to perform well would neither surprise nor bother me. But why should I have trouble with doors and light switches, water faucets and stoves? <strong>“Doors?”</strong> I can hear the reader saying. <strong>“You have trouble opening doors?”</strong> Yes. I push doors that are meant to be pulled, pull doors that should be pushed, and walk into doors that neither pull nor push, but slide. Moreover, I see others having the same troubles—unnecessary troubles. My problstrongs with doors have become so well known that confusing doors are often called <strong>“Norman doors.”</strong> Imagine becoming famous for doors that don’t work right. I’m pretty sure that’s not what my parents planned for me. (Put <strong>“Norman doors”</strong> into your favorite search engine—be sure to include the quote marks: it makes for fascinating reading.)</p>
+            <h1 id="page1">THE PSYCHOPATHOLOGY<br>OF EVERYDAY<br>THINGS</h1>
+            <p>If I were placed in the cockpit of a modern jet airliner, my inability to perform well would neither surprise nor bother me. But why should I have trouble with doors and light switches, water faucets and stoves? <strong>“Doors?”</strong> I can hear the reader saying. <strong>“You have trouble opening doors?”</strong> Yes. I push doors that are meant to be pulled, pull doors that should be pushed, and walk into doors that neither pull nor push, but slide. Moreover, I see others having the same troubles—unnecessary troubles. My problstrongs with doors have become so well known that confusing doors are often called <strong>“Norman doors.”</strong> Imagine becoming famous for doors that don’t work right. I’m pretty sure that’s not what my parents planned for me. (Put <strong>“Norman doors”</strong> into your favorite search engine—be sure to include the quote marks: it makes for fascinating reading.)</p>
             <p>How can such a simple thing as a door be so confusing? A door would sestrong to be about as simple a device as possible. There is not much you can do to a door: you can open it or shut it. Suppose you are in an office building, walking down a corridor. You come to a door. How does it open? Should you push or pull, on the left or the right? Maybe the door slides. If so, in which direction? I have seen doors that slide to the left, to the right, and even up into the ceiling.</p>
             <p id="page2">The design of the door should indicate how to work it without any need for signs, certainly without any need for trial and error.</p>
             <p>A friend told me of the time he got trapped in the doorway of a post office in a European city. The entrance was an imposing row of six glass swinging doors, followed immediately by a second, identical row. That’s a standard design: it helps reduce the airflow and thus maintain the indoor tstrongperature of the building. There was no visible hardware: obviously the doors could swing in either direction: all a person had to do was push the side of the door and enter.</p>
